<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dev.viskar</groupId>
    <artifactId>lib-dinput8-parent</artifactId>
    <version>BRANCH-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <javapoet.version>1.13.0</javapoet.version>
    </properties>

    <modules>
        <module>native-codegen</module>
        <module>dinput8-jextract</module>

        <module>dinput8</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- modules -->
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>lib-dinput8</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>lib-dinput8-jextract</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>lib-native-codegen</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <!--
                        <verbose>false</verbose>
                        <fork>true</fork>
                        <executable>javac</executable>
                        <compilerVersion>17</compilerVersion>
                        -->
                        <compilerArgs>
                            <arg>-g</arg>
                            <arg>-parameters</arg>
                            <arg>--add-modules</arg>
                            <arg>jdk.incubator.foreign</arg>
                        </compilerArgs>
                        <release>17</release>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>